Update and rename report_printing2g.css to report_printing2h.css

--- a/integrations/report/report_printing2h.css
+++ b/integrations/report/report_printing2h.css
@@ -1,4 +1,18 @@
-@media print { body { -webkit-print-color-adjust: exact; } }
+@media print { 
+    body * {
+        visibility: hidden;
+    }
+    #vespaBulkPrintContainer, #vespaBulkPrintContainer * {
+        visibility: visible;
+    }
+    #vespaBulkPrintContainer {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+    }
+}
+
 .vespa-report { 
     width: 210mm; 
     min-height: 297mm; /* Use min-height to allow content to grow */
