--- a/integrations/report/report_printing2v.css
+++ b/integrations/report/report_printing2v.css
@@ -959,7 +959,7 @@ hr {
 .vespa-report { 
     width: 210mm; 
     min-height: 297mm; /* Use min-height to allow content to grow */
-    padding: 8mm; 
+    padding: 6mm !important; 
     box-sizing: border-box; 
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
     font-size: 9pt;
@@ -979,7 +979,7 @@ hr {
     margin-right: 10mm;
 }
 .report-header .header-title { 
-    font-size: 20pt; 
+    font-size: 18pt !important; 
     font-weight: bold; 
     color: #444;
     flex: 1; 
@@ -1033,15 +1033,15 @@ hr {
 
 .vespa-grid-title {
     display: grid;
-    grid-template-columns: 24mm 1fr;
+    grid-template-columns: 24mm 24mm 1fr 1fr !important;
     grid-gap: 8mm;
     margin-bottom: 2mm;
     font-weight: bold;
     color: #555;
-    font-size: 11pt;
+    font-size: 9pt !important;
     padding-left: 10mm; /* Align with block content */
 }
-.vespa-grid-title div:last-child {
+.vespa-grid-title div {
     text-align: center;
 }
 
@@ -1061,24 +1061,21 @@ hr {
     min-height: 40mm;
 }
 .block-score {
-    color: #fff;
-    font-weight: bold;
-    text-align: center;
-    padding: 2mm;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
+    width: 24mm !important;
+    min-height: 40mm !important;
+    border-radius: 4px !important;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+    color: #fff !important;
 }
 .block-score p {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
 }
 .block-score .score-val {
-    font-size: 28pt;
-    line-height: 1;
-    margin-top: 1mm;
+    font-size: 24pt !important;
+    font-weight: 700 !important;
 }
 .block-body {
     padding: 0;
@@ -1140,4 +1137,10 @@ hr {
 }
 .bottom-row .comment-box {
   width: 100% !important;
+}
+
+.report-header .header-info div {
+  font-weight: bold !important;
+  font-size: 10pt !important;
+  line-height: 1.3 !important;
 } 
